--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,22 @@
                     <outputDirectory>jars/</outputDirectory>
                 </configuration>
             </plugin>
+
+            <!--Clean-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>default-clean</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
