Added more to the UserSession and finished the getUser methods.

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>docs/</directory>
+                        </fileset>
+                    </filesets>
+                </configuration>
             </plugin>
         </plugins>
     </build>
