--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -24,6 +24,7 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.12-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.njdaeger</groupId>
