--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                         <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
+                            <goal>aggregate-jar</goal>
                         </goals>
                     </execution>
                 </executions>
