--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -47,12 +47,13 @@
                 </configuration>
 
                 <executions>
+
                     <execution>
                         <id>default-compile</id>
                         <configuration>
                             <compilerArgument>-proc:none</compilerArgument>
                             <includes>
-                                <include>com.njdaeger.kernel.process.CommandProcessor</include>
+                                <include>com/njdaeger/kernel/process/CommandProcessor.java</include>
                             </includes>
                         </configuration>
                     </execution>
@@ -65,6 +66,7 @@
                         </goals>
                     </execution>
                 </executions>
+
             </plugin>
         </plugins>
     </build>
